feat(KSTIP-1921): sonarqube fixes