@@ -21,7 +21,6 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import ch.dvbern.stip.api.common.validation.RequiredCustomDocumentsProducer;
 import ch.dvbern.stip.api.dokument.entity.CustomDokumentTyp;
@@ -60,7 +59,7 @@ public class DokumentValidationUtils {
         return customProducers.stream()
             .map(producer -> producer.getRequiredDocuments(tranche).getValue())
             .flatMap(Collection::stream)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public List<CustomDokumentTyp> getExistingGesuchDokumentsOfCustomDokumentType(GesuchFormular formular) {
